--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Abhishek Padaya",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "create-react-app": "^5.0.1"
   }
 }
