--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
   "author": "Abhishek Padaya",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "create-react-app": "^5.0.1",
+    "create-react-app": "^1.2.1",
     "nodemon": "^2.0.22"
   }
 }
