--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
+    "slugify": "^1.6.6",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
