--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,9 @@
     "slugify": "^1.6.6",
     "xss-clean": "^0.1.1"
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
