--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
+    "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
   },
   "engines": {
